# mdxplain

./: .gitignore  .pylintrc  AI_USAGE.md  LICENSE  Makefile  README.md  TODOS.md  mdxplain.bib  pyproject.toml  pytest.ini  readthedocs.yaml  requirements.txt
code/data/: TrajectoryLoader.py
code/utils/: __init__.py
dev_scripts/: check_code.py
docs/: Makefile  _root_toctree.rst  ai_usage.md  api.rst  conf.py  dbscan.rst  dbscan_module.rst  getting_started.rst  how_to_cite.rst  how_to_contribute.rst  how_to_install.rst  index.rst  introduction.rst  landing.rst  license.rst  mdxplain.bib  requirements.txt  test.txt
docs/_build/doctrees/: _root_toctree.doctree  environment.pickle  getting_started.doctree  how_to_cite.doctree  how_to_contribute.doctree  how_to_install.doctree  index.doctree  landing.doctree  license.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  _root_toctree.html  (+18 more)
docs/_static/: custom.css
docs/api/: api.rst  project_structure.rst
docs/dev/: make.bat  prepare_notebooks.py
docs/main_sites/: ai_usage.md  how_to_cite.rst  how_to_install.rst  license.rst  mdxplain_orchestration.md  overview.rst
docs/theory/: theory.clustering.rst  theory.dimension_reduction.rst  theory.features.rst  theory.machine_learning.rst  theory.rst
docs/tutorials/: 00_introduction.ipynb  learning.rst
mdcataflow/: __init__.py
mdcataflow/data/: FeatureData.py  TrajectoryData.py  TrajectoryLoader.py  __init__.py
mdcataflow/utils/: ArrayConverter.py  ArrayHandler.py  CalculatorComputeHelper.py  CalculatorStatHelper.py  ContactCalculator.py  DataUtils.py  DistanceCalculator.py  __init__.py
mdxplain/: __init__.py
mdxplain/analysis/: __init__.py
mdxplain/calculators/: ContactCalculator.py  DistanceCalculator.py  FeatureShapeHelper.py  __init__.py
mdxplain/clustering/: __init__.py
mdxplain/comparison/: __init__.py
mdxplain/data/: FeatureData.py  TrajectoryData.py  TrajectoryLoader.py  __init__.py  feature_data.py  trajectory_data.py  trajectory_loader.py
mdxplain/data_selector/: __init__.py
mdxplain/decomposition/: __init__.py
mdxplain/feature/: __init__.py
mdxplain/feature_importance/: __init__.py
mdxplain/feature_selection/: __init__.py
mdxplain/pipeline/: __init__.py
mdxplain/plots/: __init__.py
mdxplain/structure_visualization/: __init__.py
mdxplain/trajectory/: __init__.py
mdxplain/utils/: DataUtils.py  __init__.py  archive_utils.py  color_utils.py  data_utils.py  feature_metadata_utils.py  nomenclature.py  output_utils.py  progress_util.py  progress_utils.py  text_utils.py  top_features_utils.py
tests/: __init__.py  conftest.py
tests/analysis/: __init__.py
tests/clustering/: __init__.py
tests/data_selector/: __init__.py
tests/decomposition/: __init__.py
tests/feature/: __init__.py
tests/feature_selection/: __init__.py
tests/fixtures/: __init__.py  mock_trajectory_factory.py  simple_test_helper.py
tests/pipeline/: __init__.py
tests/plots/: __init__.py
tests/trajectory/: __init__.py  test_dask_md_trajectory_save_load.py  test_image_molecules_remove_solvent.py  test_remove_solvent_labels.py  test_stack_labels.py  test_superpose.py
tests/utils/: __init__.py  test_data_utils.py  test_datautils.py
tutorials/: 00_introduction.ipynb  01_Quickstart_VillinHeadpiece_Full_Analysis.ipynb  02_VillinHeadpiece_Full_Analysis.ipynb
(+1950 files in other folders)
