[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdxplain"
version = "1.0.0"
description = "A Python toolkit for molecular dynamics trajectory analysis"
authors = [{name = "Maximilian Salomon", email = "maximilian.salomon@example.com"}]
license = {text = "LGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
keywords = ["molecular dynamics", "trajectory analysis", "bioinformatics", "dask", "mdtraj"]

dependencies = [
    "numpy>=2.2.1",
    "scipy>=1.14.1",
    "mdtraj>=1.10.2",
    "mdciao>=1.0.0",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.6.0",
    "tqdm>=4.67.1",
    "zarr>=3.0.0",
    "dask[array]>=2024.1.0",
    "hdbscan>=0.8.33",
    "numba>=0.60.0",
]

[project.optional-dependencies]
dev = [
    # Code formatting and style
    "black",
    "autopep8",
    "isort",
    # Linting and analysis
    "flake8",
    "pylint",
    "pycodestyle",
    "pyflakes",
    "pydocstyle",
    "vulture",
    "radon",
    # Type checking
    "mypy>=1.14.0",
    # Security
    "bandit",
    "safety",
    # Documentation coverage
    "interrogate",
    # Testing and coverage
    "pytest",
    "coverage",
    # Pre-commit hooks
    "pre-commit",
    # Profiling and performance
    "memory-profiler",
    "snakeviz",
    # docs
    "sphinx",
    "sphinx-rtd-theme",
    "myst-nb",
]
jupyter = [
    # Jupyter ecosystem for end-user analysis
    "jupyterlab",
    "notebook",
    "ipykernel",
    "ipywidgets",
]

[project.urls]
Homepage = "https://github.com/BioFreak95/mdxplain"
Repository = "https://github.com/BioFreak95/mdxplain"
Issues = "https://github.com/BioFreak95/mdxplain/issues"

[tool.setuptools.packages.find]
include = ["mdxplain*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]

# Tool configurations
[tool.black]
line-length = 80
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning:importlib.*",
    "ignore::RuntimeWarning:sklearn.*",
    "ignore::UserWarning:mdxplain.*"
]

[tool.coverage.run]
source = ["mdxplain"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]